--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
