--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.12",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "4.17.3",
     "@types/node": "^15.12.2",
+    "@types/redis": "^2.8.31",
     "class-validator": "^0.13.1",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
@@ -29,10 +33,14 @@
     "@mikro-orm/postgresql": "^4.5.6",
     "apollo-server-express": "^2.25.1",
     "argon2": "^0.28.2",
+    "connect-redis": "^6.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.0",
+    "ioredis": "4.17.3",
     "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
