--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.17",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "4.17.3",
@@ -34,6 +35,7 @@
     "apollo-server-express": "^2.25.1",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
